# autoibc

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  setup.cfg  tox.ini
.github/workflows/: main.yml
autoibc/: __init__.py  base.py  callbacks.py  data.py  hp.py  logging.py  pipeline.py  util.py
autoibc/components/: classification.py  preprocessing.py  sampling.py
benchmark-results/autoibc-1002/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1018/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1019/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1021/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1040/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1053/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-1116/3009/: configspace.json  intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-41160/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-976/3009/: intensifier.json  optimization.json  results.json  runhistory.json  scenario.json
benchmark-results/autoibc-980/3009/: intensifier.json  (+4 more)
notebooks/: visualization.ipynb
