[metadata]
name = autoibc
version = 0.0.1
description = Use case for the AutoML lecture WS22/23.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fstermann/autoibc
author = Fabian Stermann
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    imbalanced-learn
    numpy
    openml
    pandas
    scikit-learn
    smac
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
viz =
    ipykernel
    matplotlib

[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 90

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
force_single_line = True
